--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,4 @@
 Tests: build-tests
 Restrictions: allow-stderr, isolation-container, rw-build-tree, needs-root, breaks-testbed
-Depends: snapcraft
+Depends: snapcraft,
+         software-properties-common
